src/objects/Additional_commitments__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_planner__c</fullName>
        <label>Budget planner</label>
        <referenceTo>Budget_planner__c</referenceTo>
        <relationshipLabel>Additional commitments</relationshipLabel>
        <relationshipName>Additional_commitments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_of_payment__c</fullName>
        <label>Type of payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Additional commitments</label>
    <nameField>
        <displayFormat>AC{0000}</displayFormat>
        <label>Additional commitments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional commitments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>